fixed the alignment of the sponsors and some facts cards

--- a/styles/g3.css
+++ b/styles/g3.css
@@ -172,8 +172,10 @@ main > section{
 
 /* some facts related styles */
 .facts-container{
+    margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
 }
 .fact-card{
     border: 1px solid #FF900E;
@@ -211,8 +213,10 @@ main > section{
 }
 
 .sponsor-companies{
+    padding-top: 50px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    justify-items :center;
 }
 
 .sponsor-companies img{
@@ -229,7 +233,7 @@ footer{
 }
 .footer-para{
     width: 100%;
-    height: 70px;
+    height: 75px;
     background-color: bisque;
 }
 .footer p{
